--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "author": "Devin Checa",
   "description": "Dashboard mock from PSD file",
   "scripts": {
+    "dev": "webpack-watch-server",
+    "start": "node ./bin/www",
     "test": "mocha || true",
-    "webpack": "webpack",
-    "dev": "webpack-watch-server"
+    "webpack": "webpack"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -14,11 +15,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "express-generator": "^4.15.5",
+    "hbs": "~4.0.1",
     "mocha": "^4.1.0",
+    "morgan": "~1.9.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "serve-favicon": "~2.4.5",
     "webpack": "^2.6.1"
   },
   "babel": {
