--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "~1.18.2",
+    "chart.js": "^2.7.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
@@ -24,6 +25,7 @@
     "mocha": "^4.1.0",
     "morgan": "~1.9.0",
     "react": "^15.6.2",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
